Basic homepage structure

--- a/index.html
+++ b/index.html
@@ -4,35 +4,72 @@
     <meta charset="UTF-8">
     <title>Abacond S.a.s - amministrazione condominiale a Trento e Bassa Valsugana.</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/stile.css">
 </head>
 <body>
     <div class="container">
-
         <header class="row">
-            <div class="col-xs-12">
-                <div id="logo"></div>
-                <div class="punchline">Amministrazione condominiale innovativa e affidabile.</div>
+            <div class="col-xs-12 col-sm-6">
+                <div id="logo">
+                    <img src="img/logo.png" alt="">
+                </div>
+                <div id="punchline">Amministrazione condominiale innovativa e affidabile.</div>
             </div>
-
-            <nav>
+            <nav class="col-xs-12 col-sm-6">
                 <ul>
-                    <li>Home</li>
-                    <li>Contatti</li>
+                    <li><a href="#">Contatti</a></li>
+                    <li><a href="#">Home</a></li>
                 </ul>
             </nav>
         </header>
-        <main class="row">
-            <div class="col-xs-12">
-                <h1>Proponiamo i servizi più innovativi in Trentino!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolorem facilis id nisi odio perspiciatis repellendus rerum similique tempora tenetur. Aliquam asperiores commodi laudantium nisi odio odit similique tenetur, velit.</p>
+
+        <main>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>Proponiamo i servizi più innovativi in Trentino!</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolorem facilis id nisi odio perspiciatis repellendus rerum similique tempora tenetur. Aliquam asperiores commodi laudantium nisi odio odit similique tenetur, velit.</p>
+                </div>
             </div>
-            <div class="col-xs-12 col-sm-6">
-                <div class="immagine numeroVerde"></div>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <h2>Numero Verde</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
-            </div>
+
+            <section class="row servizio">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="immagine numeroVerde"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <h2>Numero Verde</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </div>
+            </section>
+
+            <section class="row servizio">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="immagine numeroVerde"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <h2>Numero Verde</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </div>
+            </section>
+
+            <section class="row servizio">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="immagine numeroVerde"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <h2>Numero Verde</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </div>
+            </section>
+
+            <section class="row servizio">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="immagine numeroVerde"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <h2>Numero Verde</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </div>
+            </section>
 
         </main>
     </div>
