Quasi finito implementazione form preventivi e fornitori

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Abacond S.a.s - amministrazione condominiale a Trento e Bassa Valsugana.</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stile.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
             <nav class="col-xs-12 col-sm-6">
                 <ul>
                     <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
-                    <li><a href="#" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
                     <li><a href="contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
