--- a/preventivo.html
+++ b/preventivo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contatti | Abacond S.a.s</title>
+    <title>Preventivo | Abacond S.a.s</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/stile.css">
@@ -40,27 +40,176 @@
                 <a href="#fornitori" id="fornitori" class="pulsante preventivi">Invia dati</a>
             </div>
 
-            <form style="display: none;" role="form" id="contactForm" data-toggle="validator" class="col-xs-12 col-sm-6 col-sm-offset-3 shake">
-                <h2>Richiesta preventivo condominiale</h2>
+            <!----------------------------- FORM CONDOMINI ---------------------------------------->
+
+            <form action="php/process.php" role="form" id="condominiForm" data-toggle="validator" class="col-xs-12 col-sm-6 shake">
+                <div class="row">
+                    <h3 class="col-xs-12">Referente</h3>
+                    <div class="form-group col-sm-6">
+                        <label for="name" class="h4 obbligatorio">Nome</label>
+                        <input type="text" class="form-control" id="name" placeholder="Inserisci nome" required data-error="Inserire nome">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="cognome" class="h4 obbligatorio">Cognome</label>
+                        <input type="text" class="form-control" id="cognome" placeholder="Inserisci cognome" required data-error="Inserire cognome">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="form-group col-sm-6">
-                        <label for="name" class="h4">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter name" required data-error="NEW ERROR MESSAGE">
+                        <label for="email" class="h4 obbligatorio">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Inserisci email" required data-error="Inserire email">
                         <div class="help-block with-errors"></div>
                     </div>
                     <div class="form-group col-sm-6">
-                        <label for="email" class="h4">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                        <label for="telefono" class="h4 obbligatorio">Telefono/Cellulare</label>
+                        <input type="text" class="form-control" id="telefono" placeholder="Inserisci recapito telefonico" required data-error="Inserire recapito telefonico">
                         <div class="help-block with-errors"></div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="message" class="h4 ">Message</label>
-                    <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
-                    <div class="help-block with-errors"></div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h3>Condominio</h3>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="nomeCondominio" class="h4 obbligatorio">Nome</label>
+                        <input type="text" class="form-control" id="nomeCondominio" placeholder="Inserisci nome condominio" required data-error="Inserire nome condominio">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="indirizzoCondominio" class="h4 obbligatorio">Indirizzo</label>
+                        <input type="text" class="form-control" id="indirizzoCondominio" placeholder="Inserisci indirizzo" required data-error="Inserire indirizzo condominio">
+                        <div class="help-block with-errors"></div>
+                    </div>
                 </div>
-                <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
-                <div id="msgSubmit" class="h3 text-center hidden"></div>
+                <div class="row">
+                    <div class="form-group col-sm-6">
+                        <label for="comuneCondominio" class="h4 obbligatorio">Comune</label>
+                        <input type="text" class="form-control" id="comuneCondominio" placeholder="Inserisci comune" required data-error="Inserire comune condominio">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="provinciaCondominio" class="h4 obbligatorio">Provincia</label>
+                        <input type="text" class="form-control" id="provinciaCondominio" placeholder="Inserisci provincia" required data-error="Inserire provincia condominio">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-6">
+                        <label for="unitàCondominio" class="h4 obbligatorio">Numero unità</label>
+                        <input type="text" class="form-control" id="unitàCondominio" placeholder="Inserisci numero unità" required data-error="Inserire numero unità">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="ascensoriCondominio" class="h4">Numero ascensori</label>
+                        <input type="text" class="form-control" id="ascensoriCondominio" placeholder="Inserisci numero ascensori" data-error="Inserire numero ascensori">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-6">
+                        <label for="scaleCondominio" class="h4">Numero scale</label>
+                        <input type="text" class="form-control" id="scaleCondominio" placeholder="Inserisci numero scale" data-error="Inserire numero scale">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <!--<label for="riscaldamentoCondominio" class="h4">Riscaldamento centralizzato</label>-->
+                        <!--<input type="text" class="form-control" id="riscaldamentoCondominio" placeholder="Inserisci numero ascensori" data-error="Inserire numero ascensori">-->
+                        <h4>Riscaldamento centralizzato</h4>
+                        <label class="radio-inline"><input type="radio" name="riscaldamento">Sì</label>
+                        <label class="radio-inline"><input type="radio" name="riscaldamento">No</label>
+                        <!--<div class="help-block with-errors"></div>-->
+                    </div>
+                </div>
+
+                <div class="col-sm-10 col-sm-offset-1">
+                    <button type="submit" id="form-submit-cond" class="pulsante">Invia richiesta di preventivo!</button>
+                </div>
+                <div id="msgSubmitCondomini" class="h3 text-center hidden"></div>
+                <div class="clearfix"></div>
+            </form>
+
+            <!----------------------------- FORM FORNITORI ---------------------------------------->
+
+            <form action="php/process.php" role="form" id="fornitoriForm" data-toggle="validator" class="col-xs-12 col-sm-6 col-sm-offset-6 shake">
+                <div class="row">
+                    <div class="form-group col-sm-6">
+                        <label for="nomeSocieta" class="h4 obbligatorio">Nome Società</label>
+                        <input type="text" class="form-control" id="nomeSocieta" placeholder="Inserisci nome società" required data-error="Inserire nome spcietà">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="referente" class="h4">Referente</label>
+                        <input type="text" class="form-control" id="referente" placeholder="Inserisci nome e cognome referente" data-error="Inserire nome e cognome referente">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-6">
+                        <label for="indirizzoSocieta" class="h4">Indirizzo</label>
+                        <input type="text" class="form-control" id="indirizzoSocieta" placeholder="Inserisci indirizzo" data-error="Inserire indirizzo">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="cap" class="h4">CAP</label>
+                        <input type="text" class="form-control" id="cap" placeholder="Inserisci CAP" data-error="Inserire CAP">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-6">
+                        <label for="comuneSocieta" class="h4">Comune</label>
+                        <input type="text" class="form-control" id="comuneSocieta" placeholder="Inserisci comune" data-error="Inserire comune">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="provinciaSocieta" class="h4">Provincia</label>
+                        <input type="text" class="form-control" id="provinciaSocieta" placeholder="Inserisci provincia" data-error="Inserire provincia">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-4">
+                        <label for="emailSocieta" class="h4 obbligatorio">Email</label>
+                        <input type="email" class="form-control" id="emailSocieta" placeholder="Inserisci email" required data-error="Inserire email">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label for="telefonoSocieta" class="h4 obbligatorio">Telefono/Cellulare</label>
+                        <input type="text" class="form-control" id="telefonoSocieta" placeholder="Inserisci recapito telefonico" required data-error="Inserire recapito telefonico">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label for="faxSocieta" class="h4">Fax</label>
+                        <input type="text" class="form-control" id="faxSocieta" placeholder="Inserisci fax" data-error="Inserire fax">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-4">
+                        <h4 class="obbligatorio">Zona intervento</h4>
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="">Trento</label>
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="">Alta Valsugana</label>
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="">Bassa Valsugana</label>
+                        </div>
+                    </div>
+                    <div class="form-group col-sm-8">
+                        <label for="message" class="h4 obbligatorio">Attività svolte</label>
+                        <textarea id="message" class="form-control" rows="5" placeholder="Spazio per dettagli aggiuntivi" required></textarea>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+
+                <div class="col-sm-10 col-sm-offset-1">
+                    <button type="submit" id="form-submit-forn" class="pulsante">Invia richiesta di preventivo!</button>
+                </div>
+                <div id="msgSubmitFornitori" class="h3 text-center hidden"></div>
                 <div class="clearfix"></div>
             </form>
 
@@ -87,7 +236,13 @@
 
         <script>
             $('#condomini').click(function(){
-                $('#contactForm').show(500);
+                $('#fornitoriForm').hide();
+                $('#condominiForm').show(500);
+            });
+
+            $('#fornitori').click(function(){
+                $('#fornitoriForm').show(500);
+                $('#condominiForm').hide();
             });
         </script>
     </div>
