--- a/contatti.html
+++ b/contatti.html
@@ -19,20 +19,61 @@
             </div>
             <nav class="col-xs-12 col-sm-6">
                 <ul>
-                    <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
-                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
                     <li><a href="#" class="active hvr-shutter-out-vertical">Contatti</a></li>
+                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
             </nav>
         </header>
 
-        <main>
-
-            <aside>
-
+        <main class="row">
+            <section class="col-sm-6">
+                <h1>Contattaci!</h1>
+                <p>Qui va il form contatti classico!</p>
+                <form role="form" id="contactForm" data-toggle="validator" class="shake">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label for="name" class="h4">Name</label>
+                            <input type="text" class="form-control" id="name" placeholder="Enter name" required data-error="NEW ERROR MESSAGE">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="email" class="h4">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="message" class="h4 ">Message</label>
+                        <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
+                    <div id="msgSubmit" class="h3 text-center hidden"></div>
+                    <div class="clearfix"></div>
+                </form>
+            </section>
+            <aside class="col-sm-6">
+                <h1>Recapiti</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dignissimos ipsum quaerat voluptas? Commodi debitis dicta ea earum ex expedita facere, illo optio perspiciatis possimus provident quibusdam, soluta ullam, vero!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dignissimos ipsum quaerat voluptas? Commodi debitis dicta ea earum ex expedita facere, illo optio perspiciatis possimus provident quibusdam, soluta ullam, vero!</p>
             </aside>
         </main>
+        <footer class="row">
+            <div class="col-xs-12 col-sm-4">
+                <h2>Titolo sezione</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <h2>Titolo sezione</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <h2>Titolo sezione</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
