--- a/preventivo.html
+++ b/preventivo.html
@@ -20,9 +20,9 @@
             </div>
             <nav class="col-xs-12 col-sm-6">
                 <ul>
-                    <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
-                    <li><a href="#" class="hvr-shutter-out-vertical">Preventivi</a></li>
                     <li><a href="contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
+                    <li><a href="#" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
             </nav>
@@ -118,7 +118,12 @@
                     <!--<button type="submit" id="form-submit" class="pulsante">Invia richiesta di preventivo!</button>-->
                     <!--<div class="col-sm-10 col-sm-offset-1">-->
                     <!--</div>-->
-                    <input type="submit" id="form-submit" class="btn btn-success btn-lg pull-right" value="Invia">Invia</input>
+                    <div class="spinner">
+                        <div class="bounce1"></div>
+                        <div class="bounce2"></div>
+                        <div class="bounce3"></div>
+                    </div>
+                    <input type="submit" id="form-submit" class="btn btn-success btn-lg pull-right" value="Invia">
                     <div id="msgSubmitCondomini" class="h3 text-center hidden"></div>
                     <div class="clearfix"></div>
                 </form>
