--- a/contatti.html
+++ b/contatti.html
@@ -30,26 +30,32 @@
         <main class="row">
             <section class="col-sm-6">
                 <h1>Contattaci!</h1>
-                <p>Qui va il form contatti classico!</p>
+                <p>Compila il form sottostante per contattarci via e-mail.</p>
+                <p>Sei un nostro condomino?<br>Per segnalarci eventuali guasti contatta il numero verde 800 046 165, attivo 24/24 ore.</p>
                 <form role="form" id="contactForm" data-toggle="validator" class="shake">
                     <div class="row">
                         <div class="form-group col-sm-6">
-                            <label for="name" class="h4">Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter name" required data-error="NEW ERROR MESSAGE">
+                            <label for="name" class="h4">Nome e Cognome</label>
+                            <input type="text" class="form-control" id="name" placeholder="Inserisci nome e cognome" required data-error="Inserisci nome e cognome.">
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group col-sm-6">
                             <label for="email" class="h4">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                            <input type="email" class="form-control" id="email" placeholder="Inserisci email" required required data-error="Inserisci email.">
                             <div class="help-block with-errors"></div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="message" class="h4 ">Message</label>
-                        <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
+                        <label for="message" class="h4 ">Messaggio</label>
+                        <textarea id="message" class="form-control" rows="5" placeholder="Inserisci il tuo messaggio" required required data-error="Inserisci il tuo messaggio."></textarea>
                         <div class="help-block with-errors"></div>
                     </div>
-                    <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
+                    <div class="spinner">
+                        <div class="bounce1"></div>
+                        <div class="bounce2"></div>
+                        <div class="bounce3"></div>
+                    </div>
+                    <input type="submit" id="form-submit" class="btn btn-success btn-lg pull-right " value="Invia">
                     <div id="msgSubmit" class="h3 text-center hidden"></div>
                     <div class="clearfix"></div>
                 </form>
@@ -76,4 +82,7 @@
         </footer>
     </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="js/validator.min.js"></script>
+<script src="js/scripts.js"></script>
 </html>
