Form contatti ultimato, homepage quasi a posto!

--- a/indexORIGINALE.html
+++ b/indexORIGINALE.html
@@ -36,34 +36,34 @@
             </div>
 
             <section class="row servizio">
-                <div class="col-xs-12 col-sm-4">
+                <article class="col-xs-12 col-sm-4">
                     <div class="immagine numeroVerde"></div>
                     <h2>Numero Verde</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
-                </div>
-                <div class="col-xs-12 col-sm-4">
+                </article>
+                <article class="col-xs-12 col-sm-4">
                     <div class="immagine archivio"></div>
                     <h2>Accesso ai propri documenti</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
-                </div>
-                <div class="col-xs-12 col-sm-4">
+                </article>
+                <article class="col-xs-12 col-sm-4">
                     <div class="immagine manutenzioni"></div>
                     <h2>Manutenzioni programmate</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
-                </div>
+                </article>
             </section>
 
             <section class="row servizio">
-                <div class="col-xs-12 col-sm-6">
+                <article class="col-xs-12 col-sm-6">
                     <div class="immagine veracard"></div>
                     <h2>Veracard</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
-                </div>
-                <div class="col-xs-12 col-sm-6">
+                </article>
+                <article class="col-xs-12 col-sm-6">
                     <div class="immagine assemblee"></div>
                     <h2>Assemblee smart</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
-                </div>
+                </article>
             </section>
 
             <section class="row">
