Creazione pagina fornitori, modifica pagina contatti

--- a/contatti.html
+++ b/contatti.html
@@ -28,6 +28,25 @@
         </header>
 
         <main class="row">
+            <section class="col-sm-12">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h1>Recapiti</h1>
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Sede operativa</h3>
+                        <p>Via Edda Albertini, 8 - Trento</p>
+                        <p>0461-752972</p>
+                        <p>0461-756361</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Sede legale ed amministrativa</h3>
+                        <p>Via Roncegno 21/B - Borgo Valsugana (TN)</p>
+                        <p>0461-752972</p>
+                        <p>0461-756361</p>
+                    </div>
+                </div>
+            </section>
             <section class="col-sm-6">
                 <h1>Contattaci!</h1>
                 <p>Compila il form sottostante per contattarci via e-mail.</p>
@@ -60,11 +79,11 @@
                     <div class="clearfix"></div>
                 </form>
             </section>
-            <aside class="col-sm-6">
-                <h1>Recapiti</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dignissimos ipsum quaerat voluptas? Commodi debitis dicta ea earum ex expedita facere, illo optio perspiciatis possimus provident quibusdam, soluta ullam, vero!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dignissimos ipsum quaerat voluptas? Commodi debitis dicta ea earum ex expedita facere, illo optio perspiciatis possimus provident quibusdam, soluta ullam, vero!</p>
-            </aside>
+            <div class="col-sm-6">
+                <h2>Fornitori</h2>
+                <p>Per segnalare la vostra attività o proporvi per effettuare manutenzioni nei condomini che amministriamo, compilate il
+                    <a href="moduli/fornitori.html">modulo fornitori</a> </p>
+            </div>
         </main>
         <footer class="row">
             <div class="col-xs-12 col-sm-4">
