Sito quasi ultimato!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%;">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,27 +8,89 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stile.css">
 </head>
-<body style="height: 100%">
+<body>
     <div class="container principale">
-        <main class="row">
-            <div class="col-xs-12 center-block">
-                <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <img src="img/logo.png" alt="Logo abacond" style="width: 60%;">
-                    </div>
+        <header class="row">
+            <div class="col-xs-12 col-sm-6">
+                <div id="logo">
+                    <a href="index.html"><img src="img/logo.png" alt=""></a>
                 </div>
-                <div class="row" style="margin-top: 2em;">
-                    <div class="col-xs-12" >
-                        <h1 class="text-center">Sito in costruzione</h1>
-                        <p>Stiamo provvedendo ad un completo rifacimento del sito, per renderlo più moderno e facilmente fruibile dai nostri condomini.</p>
-                        <p>Verrà reso attivo nel corso della prossima settimana, ci scusiamo per il momentaneo disguido.</p>
-                        <!--<h2 style="margin-top: 2em">Contatti</h2>-->
-                        <!--<p>Per eventuali emergenze, i nostri condomini posso rivolgersi al numero verde 199.</p>-->
-                        <!--<p>Email: supporto@abacond.com</p>-->
-                    </div>
+                <div id="punchline">Amministrazione condominiale innovativa e affidabile.</div>
+            </div>
+            <nav class="col-xs-12 col-sm-6">
+                <ul>
+                    <li><a href="contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
+                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
+                    <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>Proponiamo i servizi più innovativi in Trentino!</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolorem facilis id nisi odio perspiciatis repellendus rerum similique tempora tenetur. Aliquam asperiores commodi laudantium nisi odio odit similique tenetur, velit.</p>
                 </div>
             </div>
+
+            <section class="row servizio">
+                <article class="col-xs-12 col-sm-12 col-md-4">
+                    <div class="immagine numeroVerde"></div>
+                    <h2>Numero Verde</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </article>
+                <article class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="immagine archivio"></div>
+                    <h2>Accesso ai propri documenti</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </article>
+                <article class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="immagine manutenzioni"></div>
+                    <h2>Manutenzioni programmate</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </article>
+            </section>
+
+            <section class="row servizio">
+                <article class="col-xs-12 col-sm-6">
+                    <div class="immagine veracard"></div>
+                    <h2>Veracard</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </article>
+                <article class="col-xs-12 col-sm-6">
+                    <div class="immagine assemblee"></div>
+                    <h2>Assemblee smart</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                </article>
+            </section>
+
+            <section class="row">
+                <div class="col-xs-12" style="text-align: center;">
+                    <h1>Vuoi avere anche tu accesso a questi servizi?</h1>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+                    <a href="preventivo.html" class="pulsante">Richiedi un preventivo gratuito!</a>
+                </div>
+            </section>
         </main>
+
+        <footer class="row">
+            <div class="col-xs-12 col-sm-4">
+                <h2>Titolo sezione</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <h2>Titolo sezione</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <h2>Titolo sezione</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            </div>
+        </footer>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
