--- a/preventivo.html
+++ b/preventivo.html
@@ -31,7 +31,7 @@
         <main class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <h2>Condomini</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi blanditiis expedita inventore natus quibusdam quis tempore totam? Animi, at consequatur explicabo iste itaque necessitatibus non odio quis sunt vero?</p>
+                <p>Vi chiediamo di compilare con precisione i campi sottostanti, in modo da poter proporre un adeguato preventivo per la gestione del condominio da voi richiesta.</p>
 
                 <!----------------------------- FORM CONDOMINI ---------------------------------------->
                 <form action="php/process.php" role="form" id="condominiForm" data-toggle="validator" class="col-xs-12 shake">
